--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -13,5 +13,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Secret": "EE498DCADE6647678C58E51E20C799C9"
+  }
   "AllowedHosts": "*"
 }
